@@ -23,6 +23,18 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|CayenneException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|CayenneRuntimeException
 import|;
 end_import
@@ -37,49 +49,7 @@ name|cayenne
 operator|.
 name|map
 operator|.
-name|DataMap
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|Embeddable
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|ObjEntity
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|QueryDescriptor
+name|*
 import|;
 end_import
 
@@ -2011,6 +1981,8 @@ name|ObjEntity
 argument_list|>
 name|entities
 parameter_list|)
+throws|throws
+name|CayenneException
 block|{
 if|if
 condition|(
