@@ -27,6 +27,18 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|CayenneException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|gen
 operator|.
 name|ArtifactsGenerationMode
@@ -967,6 +979,8 @@ name|getDataMaps
 argument_list|()
 control|)
 block|{
+try|try
+block|{
 name|ClassGenerationAction
 name|generator
 init|=
@@ -1168,6 +1182,32 @@ argument_list|(
 name|generator
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|CayenneException
+name|exception
+parameter_list|)
+block|{
+name|JOptionPane
+operator|.
+name|showMessageDialog
+argument_list|(
+name|this
+operator|.
+name|getView
+argument_list|()
+argument_list|,
+name|exception
+operator|.
+name|getUnlabeledMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
 block|}
 return|return
 name|generators
